--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 
 <head>
     <title>微小宝React模板Demo页面</title>
-    <link rel="stylesheet" href="http://localhost:8080/app.css">
+    <link rel="stylesheet" href="dist/app.css">
 </head>
 
 <body>
     <div id="root"></div>
-    <script src="http://localhost:8080/app.js"></script>
+    <script src="dist/dll.min.js"></script>
+    <script src="dist/app.js"></script>
 </body>
 
 </html>
